--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
-BOT_TOKEN = ""
-OWNER_ID = ""
-DATABASE_URL = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "7432412877:AAGwz8j8BSNdG4pl32bQrkJz1wbgkNQFqdM"
+OWNER_ID = "6643388068"
+DATABASE_URL = "mongodb+srv://Merge1:Merge@cluster0.k7ungxs.mongodb.net/"
+TELEGRAM_API = "22353942"
+TELEGRAM_HASH = "a71c2aa4f6b764734411512973e34763"
